--- a/style.css
+++ b/style.css
@@ -4,22 +4,22 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.centered-idea-page-element {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.centered-idea-page-element img {
   width: 100%;
 }
-.aaa .more-inf {
+.centered-idea-page-element .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
   
-  .aaa {
+  .centered-idea-page-element {
     text-align: center;
   }
   
