--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -49,7 +49,10 @@ input,
 button{
   outline: none;
 }
-button {
+.add,
+.edit,
+.save,
+.delete {
   background: none;
   border: 0px;
   color: #888;
@@ -58,7 +61,10 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.add:hover,
+.edit:hover,
+.save:hover,
+.delete:hover {
   color: #3a3A3a;
 }
 /* Heading */
