--- a/style.css
+++ b/style.css
@@ -81,8 +81,7 @@ button{
 
 /* Heading */
 
-.todo__header,
-label[for="new-task"] {
+.todo__header {
   color: #333;
   font-weight: 700;
   font-size: 15px;
